# data files needed by the game

zsdxdatadir = $(datadir)/zsdx
zsdxdata_DATA = project_db.zsd

images_dir = $(zsdxdatadir)/images
images__DATA =					\
  images/title.png

sound_dir = $(zsdxdatadir)/sounds
sound__DATA =					\
  sounds/agahnim_blue_ball.wav			\
  sounds/agahnim_orange_ball.wav		\
  sounds/bomb.wav				\
  sounds/boss_dead.wav				\
  sounds/boss_hurt.wav				\
  sounds/bounce.wav				\
  sounds/bow.wav				\
  sounds/bush.wav				\
  sounds/chest_appears.wav			\
  sounds/chest_open.wav				\
  sounds/cursor.wav				\
  sounds/door_closed.wav			\
  sounds/door_open.wav				\
  sounds/drowning.wav				\
  sounds/enemy_awake.wav			\
  sounds/enemy_hurt.wav				\
  sounds/enemy_dead.wav				\
  sounds/explosion.wav				\
  sounds/heart.wav				\
  sounds/hookshot.wav				\
  sounds/ice.wav				\
  sounds/item_in_water.wav			\
  sounds/jump.wav				\
  sounds/lamp.wav				\
  sounds/lens_of_truth_end.wav			\
  sounds/lens_of_truth_start.wav		\
  sounds/lift.wav				\
  sounds/link_falls.wav				\
  sounds/link_hurt.wav				\
  sounds/link_pushes.wav			\
  sounds/link_seen.wav				\
  sounds/magic_bar.wav				\
  sounds/message_end.wav			\
  sounds/monster_hurt.wav			\
  sounds/octorok.wav				\
  sounds/pause_closed.wav			\
  sounds/pause_open.wav				\
  sounds/picked_item.wav			\
  sounds/picked_rupee.wav			\
  sounds/picked_small_key.wav			\
  sounds/piece_of_heart.wav			\
  sounds/rupee_counter_end.wav			\
  sounds/rupee_counter.wav			\
  sounds/secret.wav				\
  sounds/shield.wav				\
  sounds/stone.wav				\
  sounds/switch.wav				\
  sounds/sword1.wav				\
  sounds/sword2.wav				\
  sounds/sword3.wav				\
  sounds/sword4.wav				\
  sounds/sword_spin_attack_load.wav		\
  sounds/sword_spin_attack_release.wav		\
  sounds/throw.wav				\
  sounds/treasure.wav				\
  sounds/victory.wav				\
  sounds/walk_on_grass.wav			\
  sounds/walk_on_water.wav			\
  sounds/wrong.wav				\
  sounds/zora.wav				


music_dir = $(zsdxdatadir)/music
music__DATA = 					\
  music/beginning.it				\
  music/boss.it					\
  music/castle.it				\
  music/credits.it				\
  music/dark_world.it				\
  music/excalibur.it				\
  music/fanfare.it				\
  music/game_over.it				\
  music/lost_woods.it				\
  music/menu.it					\
  music/mini_game.it				\
  music/overworld.it				\
  music/rabbit.it				\
  music/soldiers.it				\
  music/title_screen_full.it			\
  music/title_screen_short.it			\
  music/village.it					

tilesets_dir = $(zsdxdatadir)/tilesets
tilesets__DATA =				\
  tilesets/tileset0000.zsd

images_tilesets_dir = $(images_dir)/tilesets
images_tilesets__DATA = 			\
  images/tilesets/tileset0000.png		

maps_dir = $(zsdxdatadir)/maps
maps__DATA = 					\
  maps/map0000.zsd				\
  maps/map0001.zsd				\
  maps/map0002.zsd				

sprites_link_dir = $(zsdxdatadir)/sprites/link
sprites_link__DATA = 				\
  sprites/link/link_green.zsd			\
  sprites/link/link_blue.zsd			\
  sprites/link/link_red.zsd			\
  sprites/link/sword1.zsd			\
  sprites/link/sword2.zsd			\
  sprites/link/sword3.zsd			\
  sprites/link/sword4.zsd			

images_sprites_link_dir = $(images_dir)/sprites/link
images_sprites_link__DATA = 			\
  images/sprites/link/stopped.png		\
  images/sprites/link/walking.png		\
  images/sprites/link/sword_tunic0.png		\
  images/sprites/link/sword_tunic1.png		\
  images/sprites/link/sword_tunic2.png		\
  images/sprites/link/sword1.png		\
  images/sprites/link/sword2.png		\
  images/sprites/link/sword3.png		\
  images/sprites/link/sword4.png		

EXTRA_DIST =					\
  $(zsdxdata_DATA)				\
  $(images__DATA)				\
  $(images_sprites_link__DATA)			\
  $(images_tilesets__DATA)			\
  $(sound__DATA)				\
  $(music__DATA)				\
  $(sprite_link__DATA)				\
  $(tilesets__DATA)				\
  $(maps__DATA)					
