# data files needed by the game

zsdxdatadir = $(datadir)/zsdx
zsdxdata_DATA = 				\
  project_db.zsd				\
  zsdx.ttf

sound_dir = $(zsdxdatadir)/sounds
sound__DATA =					\
  sounds/agahnim_blue_ball.wav			\
  sounds/agahnim_orange_ball.wav		\
  sounds/bomb.wav				\
  sounds/boss_dead.wav				\
  sounds/boss_hurt.wav				\
  sounds/bounce.wav				\
  sounds/bow.wav				\
  sounds/bush.wav				\
  sounds/chest_appears.wav			\
  sounds/chest_open.wav				\
  sounds/cursor.wav				\
  sounds/danger.wav				\
  sounds/door_closed.wav			\
  sounds/door_open.wav				\
  sounds/drowning.wav				\
  sounds/enemy_awake.wav			\
  sounds/enemy_hurt.wav				\
  sounds/enemy_dead.wav				\
  sounds/explosion.wav				\
  sounds/heart.wav				\
  sounds/hookshot.wav				\
  sounds/ice.wav				\
  sounds/intro.wav				\
  sounds/item_in_water.wav			\
  sounds/jump.wav				\
  sounds/lamp.wav				\
  sounds/lens_of_truth_end.wav			\
  sounds/lens_of_truth_start.wav		\
  sounds/lift.wav				\
  sounds/link_falls.wav				\
  sounds/link_hurt.wav				\
  sounds/link_pushes.wav			\
  sounds/link_seen.wav				\
  sounds/magic_bar.wav				\
  sounds/message_end.wav			\
  sounds/monster_hurt.wav			\
  sounds/octorok.wav				\
  sounds/ok.wav					\
  sounds/pause_closed.wav			\
  sounds/pause_open.wav				\
  sounds/picked_item.wav			\
  sounds/picked_rupee.wav			\
  sounds/picked_small_key.wav			\
  sounds/piece_of_heart.wav			\
  sounds/rupee_counter_end.wav			\
  sounds/rupee_counter.wav			\
  sounds/secret.wav				\
  sounds/shield.wav				\
  sounds/stone.wav				\
  sounds/switch.wav				\
  sounds/sword1.wav				\
  sounds/sword2.wav				\
  sounds/sword3.wav				\
  sounds/sword4.wav				\
  sounds/sword_spin_attack_load.wav		\
  sounds/sword_spin_attack_release.wav		\
  sounds/throw.wav				\
  sounds/treasure.wav				\
  sounds/victory.wav				\
  sounds/walk_on_grass.wav			\
  sounds/walk_on_water.wav			\
  sounds/wrong.wav				\
  sounds/zora.wav				

music_dir = $(zsdxdatadir)/music
music__DATA = 					\
  music/beginning.it				\
  music/boss.it					\
  music/castle.it				\
  music/credits.it				\
  music/dark_world.it				\
  music/excalibur.it				\
  music/fanfare.it				\
  music/game_over.it				\
  music/lost_woods.it				\
  music/mini_game.it				\
  music/overworld.it				\
  music/rabbit.it				\
  music/soldiers.it				\
  music/title_screen_full.it			\
  music/title_screen_short.it			\
  music/triforce.it				\
  music/village.it					

tilesets_dir = $(zsdxdatadir)/tilesets
tilesets__DATA =				\
  tilesets/tileset0000.zsd

maps_dir = $(zsdxdatadir)/maps
maps__DATA = 					\
  maps/map0000.zsd				\
  maps/map0001.zsd				\
  maps/map0002.zsd				

sprites_dir = $(zsdxdatadir)/sprites
sprites__DATA = 				

sprites_menus_dir = $(sprites_dir)/menus
sprites_menus__DATA = 				\
  sprites/menus/cursor.zsd			

sprites_link_dir = $(sprites_dir)/link
sprites_link__DATA = 				\
  sprites/link/tunic0.zsd			\
  sprites/link/tunic1.zsd			\
  sprites/link/tunic2.zsd			\
  sprites/link/sword1.zsd			\
  sprites/link/sword2.zsd			\
  sprites/link/sword3.zsd			\
  sprites/link/sword4.zsd			\
  sprites/link/shield1.zsd			\
  sprites/link/shield2.zsd			\
  sprites/link/shield3.zsd			

sprites_hud_dir = $(sprites_dir)/hud
sprites_hud__DATA = 				\
  sprites/hud/empty_heart.zsd			

images_dir = $(zsdxdatadir)/images
images__DATA =					

images_tilesets_dir = $(images_dir)/tilesets
images_tilesets__DATA = 			\
  images/tilesets/tileset0000.png		

images_link_dir = $(images_dir)/link
images_link__DATA = 				\
  images/link/stopped_tunic.png			\
  images/link/stopped_shield.png		\
  images/link/walking_tunic.png			\
  images/link/walking_shield.png		\
  images/link/sword_tunic0.png			\
  images/link/sword_tunic1.png			\
  images/link/sword_tunic2.png			\
  images/link/sword_sword1.png			\
  images/link/sword_sword2.png			\
  images/link/sword_sword3.png			\
  images/link/sword_sword4.png			\
  images/link/sword_shield1.png			\
  images/link/sword_shield2.png			\
  images/link/sword_shield3.png			

images_menus_dir = $(images_dir)/menus
images_menus__DATA = 				\
  images/menus/title.png			\
  images/menus/zelda_solarus_presents.png	\
  images/menus/cloud.png			\
  images/menus/select_a_file.png		\
  images/menus/save1.png			\
  images/menus/save2.png			\
  images/menus/save3.png			\
  images/menus/cursor.png

images_hud_dir = $(images_dir)/hud
images_hud__DATA =				\
  images/hud/hearts.png				\
  images/hud/rupee_icon.png			\
  images/hud/digits.png				

EXTRA_DIST =					\
  $(zsdxdata_DATA)				\
  $(sound__DATA)				\
  $(music__DATA)				\
  $(tilesets__DATA)				\
  $(maps__DATA)					\
  $(sprites__DATA)				\
  $(sprites_link__DATA)				\
  $(sprites_menus__DATA)			\
  $(sprites_hud__DATA)				\
  $(images__DATA)				\
  $(images_tilesets__DATA)			\
  $(images_link__DATA)				\
  $(images_menus__DATA)				\
  $(images_hud__DATA)				
